--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "zod": "^3.21.4"
   }
 }
