--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts",
-    "prod": "node build/http/server.js",
+    "dev": "tsx watch src/shared/http/server.ts",
+    "prod": "node build/shared/http/server.js",
     "build": "tsup src --out-dir build"
   },
   "keywords": [],
@@ -23,6 +23,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "mysql2": "3.2.0",
+    "reflect-metadata": "0.1.13",
+    "tsyringe": "4.7.0",
+    "typeorm": "0.3.13",
     "zod": "^3.21.4"
   }
 }
