--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/shared/http/server.ts",
     "prod": "node build/shared/http/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "typeorm": "tsx ./node_modules/typeorm/cli"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,10 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "@types/uuid": "9.0.1",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
-    "typescript": "^5.0.4"
+    "typescript": "5.0.4"
   },
   "dependencies": {
     "chalk": "^5.2.0",
@@ -27,6 +29,7 @@
     "reflect-metadata": "0.1.13",
     "tsyringe": "4.7.0",
     "typeorm": "0.3.13",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-error": "1.5.0"
   }
 }
