Create, Edit, Get e Delete de User e de UserProfile

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 NODE_ENV = "dev" # dev, test or prod
+PORT = 3333
+
+DB_NAME = "ibuy" 
+DB_HOST = "localhost"
+DB_PORT = 3306
+DB_USERNAME = ""
+DB_PASSWORD = ""
